--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "translate",
         "lang",
         "folders",
-        "resources/lang",
+        "resources lang",
         "translate",
         "from",
         "language",
