--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     "require": {
         "php": ">7.0.1",
         "illuminate/console": ">=5.1",
-        "illuminate/support": "5.5.x|5.6.x|5.7.x|5.8.x",
-        "illuminate/translation": "5.5.x|5.6.x|5.7.x|5.8.x",
+        "illuminate/support": "5.5.x|5.6.x|5.7.x|5.8.x|6.x",
+        "illuminate/translation": "5.5.x|5.6.x|5.7.x|5.8.x|6.x",
         "stichoza/google-translate-php": "dev-master"
     },
     "authors": [
