--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "php": ">7.0.1",
         "illuminate/console": ">=5.1",
         "illuminate/support": "5.5.x|5.6.x|5.7.x|5.8.x|6.x",
-        "illuminate/translation": "5.5.x|5.6.x|5.7.x|5.8.x|6.x",
+        "illuminate/translation": "5.5.x|5.6.x|5.7.x|5.8.x|6.x|7.x",
         "stichoza/google-translate-php": "dev-master"
     },
     "authors": [
