--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "require": {
         "php": ">7.0.1",
         "illuminate/console": ">=5.1",
-        "illuminate/support": "5.5.x|5.6.x|5.7.x|5.8.x|6.x|7.*|8.*",
+        "illuminate/support": "^5.5|^6|^7|^8",
         "illuminate/translation": "5.5.x|5.6.x|5.7.x|5.8.x|6.x|7.*|8.*",
         "stichoza/google-translate-php": "dev-master"
     },
